--- a/2_Assessment.Rmd
+++ b/2_Assessment.Rmd
@@ -30,9 +30,9 @@ From the 1960s through the early 1970s, foreign trawling enterprises harvested c
 
 **Discards**
 
-Data on discards of `r spp` are available from two different data sources.  The earliest source is called the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (NWFSC, personal communication) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.  Length compositions for discards show a wide range of sizes being discarded, with a \hl{ peak are XX cm (Cite figure).}  
+Data on discards of `r spp` are available from two different data sources.  The earliest source is called the Pikitch data and comes from a study organized by Ellen Pikitch that collected trawl discards from 1985-1987 [@pikitch_evaluation_1988].  The northern and southern boundaries of the study were $48^\circ 42^\prime$ N latitude and $42^\circ 60^\prime$ N. latitude respectively, which is primarily within the Columbia INPFC area [@pikitch_evaluation_1988 ; @rogers_numerical_1992].  Participation in the study was voluntary and included vessels using bottom, midwater, and shrimp trawl gears.  Observers of normal fishing operations on commercial vessels collected the data, estimated the total weight of the catch by tow and recorded the weight of species retained and discarded in the sample.  Results of the Pikitch data were obtained from John Wallace (NWFSC, personal communication) in the form of ratios of discard weight to retained weight of `r spp` and sex-specific length frequencies.  Discard estimates are shown in Table \ref{tab:Discard}.   
 
-The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref:{tab:Discard} shows the discard ratios of `r spp` from the WCGOP.  Since 2011, when the trawl rationalization proram was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
+The second source is from the West Coast Groundfish Observer Program (WCGOP).  This program is part of the NWFSC and has been recording discard observations since 2003. Table \ref{tab:Discard} shows the discard ratios of `r spp` from the WCGOP.  Since 2011, when the trawl rationalization program was implemented, observer coverage rates increased to nearly 100% for all the limited entry trawl vessels in the program and discard rates declined compared to pre-2011 rates.  Discard rates were obtained for both the catch-share and the non-catch share sector for `r spp`.  A single discard rate was calculated by weighting discard rates based on the commercial landings by each sector.  Discard length composition for the trawl fleet varied by year, with larger fish being discarded prior to 2011 (Figure \ref{fig:WCGOP_discard}).
  
 
 
@@ -42,7 +42,7 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
 
 **Historical Commercial Catch-per-unit effort**
 
-Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (\ref{tab:CPUE_Summary} from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
+Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery were combined for the INPFC Vancouver and Columbia areas (Table \ref{tab:CPUE_Summary} from Gunderson [-@gunderson_population_1977]).  Although these data reflect catch rates for the US fleet, the highest catch rates coincided with the beginning of removals by the foreign fleet.  This suggest that, barring unaccounted changes in fishing efficiency during this period, the level of abundance was high at that time.  A CV of 0.40 was used in this assessment to be consistent with the CV observed in the survey data.
 
 
 ###Fishery-Independent Data:
@@ -70,7 +70,7 @@ The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.
 
 **Triennial Bottom Trawl Survey**
 
-The triennial survey was first conducted by the AFSC in 1977 and spanned the timeframe from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated \hl{(Figure 5)}. The survey design has changed slightly over the period of time \hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July \hl{(Figure 4)}.
+The triennial survey was first conducted by the AFSC in 1977 and spanned the time-frame from 1977-2004. The survey's design and sampling methods are most recently described in [@weinberg_estimation_2002]. Its basic design was a series of equally-spaced transects from which searches for tows in a specific depth range were initiated \hl{(Figure 5)}. The survey design has changed slightly over the period of time \hl{(Table 4, Figure 3)}. In general, all of the surveys were conducted in the mid-summer through early fall: the 1977 survey was conducted from early July through late September; the surveys from 1980 through 1989 ran from mid-July to late September; the 1992 survey spanned from mid-July through early October; the 1995 survey was conducted from early June to late August; the 1998 survey ran from early June through early August; and the 2001 and 2004 surveys were conducted in May-July \hl{(Figure 4)}.
 
 Haul depths ranged from 91-457 m during the 1977 survey with no hauls shallower than 91 m. The surveys in 1980, 1983, and 1986 covered the West Coast south to $36.8^\circ$ N latitude and a depth range of 55-366 meters. The surveys in 1989 and 1992 covered the same depth range but extended the southern range to $34.5^\circ$ N (near Point Conception). From 1995 through 2004, the surveys covered the depth range 55-500 meters and surveyed south to $34.5^\circ$ N. In the final year of the triennial series (2004), the NWFSC's Fishery Resource and Monitoring division (FRAM) conducted the survey and followed very similar protocols as the AFSC.
 
@@ -99,10 +99,10 @@ brief descriptions below:
 
 \begin{itemize}[noitemsep,nolistsep,topsep=0pt]
   \item Commercial fishery - landed: 1966-2016
-  \item Commerical fishery - discard: 2004-2015
+  \item Commercial fishery - discard: 2004-2015
   \item At-sea hake fishery: 2003-2016
   \item `r spp` Survey: 1979 and 1985
-  \item Trienial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
+  \item Triennial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
   \item AFSC Slope Survey: 1996-2001
   \item NWFS Slope Survey: 2001-2002
   \item NWFSC Shelf-Slope Survey: 2003-2016
@@ -126,9 +126,9 @@ Age structure data were available from the following sources:
 
 _Model Region 1_ 
 \begin{itemize}[noitemsep,nolistsep,topsep=0pt]
-  \item Source No. 1 (\emph{ex. research, commericla dead fish, live fish, etc},\\ 
+  \item Source No. 1 (\emph{ex. research, commercial dead fish, live fish, etc},\\ 
         date range (ex. 2010-2011)
-  \item Source No. 2 (\emph{ex. research, commericla dead fish, live fish, etc},\\
+  \item Source No. 2 (\emph{ex. research, commercial dead fish, live fish, etc},\\
         date range (ex. 2010-2011) 
   \item etc...      
   \item Begin sublist if desired 
@@ -148,7 +148,7 @@ _Model Region 1_
 **Natural mortality**
 
 Historic `r spp` ages determined using scales and surface reading methods of otoliths, resulted in estimates of natural mortality of between 0.10 and 0.20yr^-1^ with a longevity
-less than 30 years[@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural morality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  This assessment also applied a prior on natural mortality.  However, the prior and standard deviation were generated as a non-linear function of maximum age as developed by Then et al. [-@then_evaluating_2015] and modified by  Owen Hamel which greatly improved the fit to the underlying age data to create the 'Hamel-Then' prior.  A maximum age of 100 was used in the developement of the prior where female natural moratility was set equal to `r mod1$MGparmAdj$NatM_p_1_Fem_GP_1[1]` and male natural mortality estimated as an offset from females at `r round(mod1$MGparmAdj$NatM_p_1_Fem_GP_1[1] * exp(mod1$MGparmAdj$NatM_p_1_Mal_GP_1[1]),3)`. 
+less than 30 years[@gunderson_population_1977].  Based on break-and-burn method of age determination using otoliths, the maximum age of `r spp` was revised to be 90 years [@chilton_age_1982]. The updated understanding concerning `r spp` longevity reduced the estimate of natural mortality based on Hoenig's [-@hoenig_empirical_1983] relationship to 0.059yr^-1^. The previous assessment applied a prior distribution on natural mortality based upon multiple life history correlates (including Hoenig's method, Gunderson gonadosomatic index [-@gunderson_trade-off_1997], and McCoy and Gillooly's [-@mccoy_predicting_2008] theoretical relationship) developed separately for female and male `r spp`.  This assessment also applied a prior on natural mortality.  However, the prior and standard deviation were generated as a non-linear function of maximum age as developed by Then et al. [-@then_evaluating_2015] and modified by  Owen Hamel which greatly improved the fit to the underlying age data to create the 'Hamel-Then' prior.  A maximum age of 100 was used in the development of the prior where female natural memorability was set equal to `r mod1$MGparmAdj$NatM_p_1_Fem_GP_1[1]` and male natural mortality estimated as an offset from females at `r round(mod1$MGparmAdj$NatM_p_1_Fem_GP_1[1] * exp(mod1$MGparmAdj$NatM_p_1_Mal_GP_1[1]),3)`. 
 
 \vspace{.5cm}
 
@@ -157,20 +157,20 @@ less than 30 years[@gunderson_population_1977].  Based on break-and-burn method 
 Examining all biological data sources, the sex ratio of young fish are within 5% of 1:1 by either length or age (Figure \ref{fig:sexratio} and \ref{fig:sexratio_Age}), and hence this assessment the sex ratio at birth was assumed to be 1:1.  This assessment assumed a logistic maturity-at-length curve based on analysis of 537 fish maturity samples collected from the NWFSC shelf-slope survey.  This is revised from the previous assessment which assumed maturity-at-age based on the work of Hannah and Parker [@hannah_age-modulated_2007].  Additionally, the new maturity-at-length curve is based on the estimate of functional maturity an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the
 measured frequency of atretic cells (M. Head, personal communication).  The 50% size-at-maturity was estimated at 32.1 cm with maturity asymptoting to one for larger fish.
 
-The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was esimtated equal to `r mod1$MGparmAdj$Eggs_scalar_Fem[1]`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
+The fecundity-at-age has also been updated from the previous assessment based on new research.  Dick [-@dick_meta-analysis_2017] estimated new fecundity relationships for select West Coast stocks where fecundity for `r spp` was estimated equal to `r mod1$MGparmAdj$Eggs_scalar_Fem[1]`$L$^`r round(mod1$MGparmAdj$Eggs_exp_len_Fem[1],2)`^ in millions of eggs. Spawning output at length is shown in Figure \ref{fig:fecundity}.
 
 \vspace{.5cm}
 
 **Length-weight relationship**
 
-The length-weight relationship for `r spp` was esimated outside the model using all biological data available from fishery and fishery-independant data sources where the female weight-at-length in grams was estimated at `r mod1$MGparmAdj$Wtlen_1_Fem[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem[1],2)`^ and males at `r mod1$MGparmAdj$Wtlen_1_Mal[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal[1], 2)`^ where $L$ is length in cm.
+The length-weight relationship for `r spp` was estimated outside the model using all biological data available from fishery and fishery-independent data sources where the female weight-at-length in grams was estimated at `r mod1$MGparmAdj$Wtlen_1_Fem[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Fem[1],2)`^ and males at `r mod1$MGparmAdj$Wtlen_1_Mal[1]`$L$^`r round(mod1$MGparmAdj$Wtlen_2_Mal[1], 2)`^ where $L$ is length in cm.
 
 
 \vspace{.5cm}
 
 **Growth (length-at-age)**
 
-\hl{Write if estiamted or fixed in the final model}
+\hl{Write if estimated or fixed in the final model}
 
 <!-- \hl{Length-at-age was initially estimated external to the population dynamics models 
 using the von Bertalanffy growth curve, $L_i = L_{\infty}e^{(-k[t-t_0])}$, 
