--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -807,8 +807,8 @@ PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US
 portion of the Vancouver INPFC area and 950 mt for the Columbia INPFC
 area. To implement this strategy, the states of Oregon and Washington
 each established landing limits for Pacific ocean perch. Trawl trip
-limits of various forms remained in effect through 2010
-(\ref{tab:Regs}).
+limits of various forms remained in effect through 2010 (Table
+\ref{tab:Regs}).
 
 Age estimates for Pacific ocean perch prior to the 1980s were made via
 surface ageing of otoliths, which misses the very tight annuli at the
@@ -842,29 +842,12 @@ by the NWFSC, continues to cover depths from 30-700 fathoms (55-1280
 meters) on an annual basis (referred to as the `NWFSC shelf-slope
 Survey').
 
-\subsection{Map}\label{map}
-
-A map showing the scope of the assessment and depicting boundaries for
-fisheries or data collection strata is provided in Figure
-\ref{fig:boundary_map}.
-
-\subsection{Life History and Ecosystem
-Considerations}\label{life-history-and-ecosystem-considerations}
-
-\hl{Include: Ecosystem considerations (e.g., ecosystem role and trophic relationships of  the species, habitat requirements/preferences, relevant data on ecosystem processes  that may affect stock or parameters used in the stock assessment, and/or cross-FMP  interactions with other fisheries). This section should note if environmental  correlations or food web interactions were incorporated into the assessment model.  The length and depth of this section would depend on availability of data and reports  from the IEA, expertise of the STAT, and whether ecosystem factors are informational  to contribute quantitative information to the assessment.}
-
-\subsection{Fishery Information}\label{fishery-information}
-
-\hl{Include: Important features of current fishery and relevant history of fishery.}
-
 \subsection{Summary of Management
 History}\label{summary-of-management-history}
 
 \hl{Include: Summary of management history (e.g., changes in mesh sizes, trip 
                                             limits, or other management actions that may have significantly altered selection, 
                                             catch rates, or discards).}
-
-\subsection{Management Performance}\label{management-performance-1}
 
 \hl{Include: Management performance, including a table or tables comparing 
   Overfishing Limit (OFL), Annual Catch Limit (ACL), Harvest Guideline (HG) 
@@ -877,7 +860,16 @@ be found in Table \ref{tab:base_summary}.
 \subsection{Fisheries off Canada, Alaska, and/or
 Mexico}\label{fisheries-off-canada-alaska-andor-mexico}
 
-Include if necessary.
+Pacific ocean perch can be found in waters off the US west coast and
+northward through Alaskan waters. The subset of the stock off the US
+west coast represents the tail of the species distribution with little
+to no Pacific ocean perch being encountered south of northern
+California. Pacific ocean perch are harvested both in Canada and Alaska.
+The most recent updated assessments for the Bering Sea and the Gulf of
+Alaska stocks determined that neither stock are in an overfished state
+and recommended and acceptable biological catch of 43,723 mt and 23,918
+mt, respectively, for 2017.
+\hl{Insert information about the Canadian stock}
 
 \section{Assessment}\label{assessment}
 
@@ -977,14 +969,13 @@ and discarded in the sample. Results of the Pikitch data were obtained
 from John Wallace (NWFSC, personal communication) in the form of ratios
 of discard weight to retained weight of Pacific ocean perch and
 sex-specific length frequencies. Discard estimates are shown in Table
-\ref{tab:Discard}. Length compositions for discards show a wide range of
-sizes being discarded, with a \hl{ peak are XX cm (Cite figure).}
+\ref{tab:Discard}.
 
 The second source is from the West Coast Groundfish Observer Program
 (WCGOP). This program is part of the NWFSC and has been recording
-discard observations since 2003. Table \ref:\{tab:Discard\} shows the
+discard observations since 2003. Table \ref{tab:Discard} shows the
 discard ratios of Pacific ocean perch from the WCGOP. Since 2011, when
-the trawl rationalization proram was implemented, observer coverage
+the trawl rationalization program was implemented, observer coverage
 rates increased to nearly 100\% for all the limited entry trawl vessels
 in the program and discard rates declined compared to pre-2011 rates.
 Discard rates were obtained for both the catch-share and the non-catch
@@ -1001,8 +992,8 @@ year, with larger fish being discarded prior to 2011 (Figure
 \textbf{Historical Commercial Catch-per-unit effort}
 
 Data on catch-per-unit-effort (CPUE) in mt/hr from the domestic fishery
-were combined for the INPFC Vancouver and Columbia areas
-(\ref{tab:CPUE_Summary} from Gunderson
+were combined for the INPFC Vancouver and Columbia areas (Table
+\ref{tab:CPUE_Summary} from Gunderson
 (\protect\hyperlink{ref-gunderson_population_1977}{1977})). Although
 these data reflect catch rates for the US fleet, the highest catch rates
 coincided with the beginning of removals by the foreign fleet. This
@@ -1073,7 +1064,7 @@ The estimated index of abundance is shown in Table
 \textbf{Triennial Bottom Trawl Survey}
 
 The triennial survey was first conducted by the AFSC in 1977 and spanned
-the timeframe from 1977-2004. The survey's design and sampling methods
+the time-frame from 1977-2004. The survey's design and sampling methods
 are most recently described in (Weinberg et al.
 \protect\hyperlink{ref-weinberg_estimation_2002}{2002}). Its basic
 design was a series of equally-spaced transects from which searches for
@@ -1132,10 +1123,10 @@ with brief descriptions below:
 
 \begin{itemize}[noitemsep,nolistsep,topsep=0pt]
   \item Commercial fishery - landed: 1966-2016
-  \item Commerical fishery - discard: 2004-2015
+  \item Commercial fishery - discard: 2004-2015
   \item At-sea hake fishery: 2003-2016
   \item Pacific ocean perch Survey: 1979 and 1985
-  \item Trienial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
+  \item Triennial Survey: 1980, 1983, 1986, 1989, 1992, 1995, 1998, 2001, 2004
   \item AFSC Slope Survey: 1996-2001
   \item NWFS Slope Survey: 2001-2002
   \item NWFSC Shelf-Slope Survey: 2003-2016
@@ -1154,9 +1145,9 @@ Age structure data were available from the following sources:
 \emph{Model Region 1}
 
 \begin{itemize}[noitemsep,nolistsep,topsep=0pt]
-  \item Source No. 1 (\emph{ex. research, commericla dead fish, live fish, etc},\\ 
+  \item Source No. 1 (\emph{ex. research, commercial dead fish, live fish, etc},\\ 
         date range (ex. 2010-2011)
-  \item Source No. 2 (\emph{ex. research, commericla dead fish, live fish, etc},\\
+  \item Source No. 2 (\emph{ex. research, commercial dead fish, live fish, etc},\\
         date range (ex. 2010-2011) 
   \item etc...      
   \item Begin sublist if desired 
@@ -1182,7 +1173,7 @@ break-and-burn method of age determination using otoliths, the maximum
 age of Pacific ocean perch was revised to be 90 years (Chilton and
 Beamish \protect\hyperlink{ref-chilton_age_1982}{1982}). The updated
 understanding concerning Pacific ocean perch longevity reduced the
-estimate of natural morality based on Hoenig's
+estimate of natural mortality based on Hoenig's
 (\protect\hyperlink{ref-hoenig_empirical_1983}{1983}) relationship to
 0.059yr\textsuperscript{-1}. The previous assessment applied a prior
 distribution on natural mortality based upon multiple life history
@@ -1196,7 +1187,7 @@ non-linear function of maximum age as developed by Then et al.
 (\protect\hyperlink{ref-then_evaluating_2015}{2015}) and modified by
 Owen Hamel which greatly improved the fit to the underlying age data to
 create the `Hamel-Then' prior. A maximum age of 100 was used in the
-developement of the prior where female natural moratility was set equal
+development of the prior where female natural memorability was set equal
 to 0.054 and male natural mortality estimated as an offset from females
 at 0.054.
 
@@ -1224,7 +1215,7 @@ The fecundity-at-age has also been updated from the previous assessment
 based on new research. Dick
 (\protect\hyperlink{ref-dick_meta-analysis_2017}{2017}) estimated new
 fecundity relationships for select West Coast stocks where fecundity for
-Pacific ocean perch was esimtated equal to 0\(L\)\textsuperscript{4.98}
+Pacific ocean perch was estimated equal to 0\(L\)\textsuperscript{4.98}
 in millions of eggs. Spawning output at length is shown in Figure
 \ref{fig:fecundity}.
 
@@ -1232,9 +1223,9 @@ in millions of eggs. Spawning output at length is shown in Figure
 
 \textbf{Length-weight relationship}
 
-The length-weight relationship for Pacific ocean perch was esimated
+The length-weight relationship for Pacific ocean perch was estimated
 outside the model using all biological data available from fishery and
-fishery-independant data sources where the female weight-at-length in
+fishery-independent data sources where the female weight-at-length in
 grams was estimated at 0.0000098\(L\)\textsuperscript{3.11} and males at
 0.0000094\(L\)\textsuperscript{3.12} where \(L\) is length in cm.
 
@@ -1242,7 +1233,7 @@ grams was estimated at 0.0000098\(L\)\textsuperscript{3.11} and males at
 
 \textbf{Growth (length-at-age)}
 
-\hl{Write if estiamted or fixed in the final model}
+\hl{Write if estimated or fixed in the final model}
 
 \vspace{.5cm} \textbf{Aging Precision And Bias}
 
