--- a/1_Introduction.Rmd
+++ b/1_Introduction.Rmd
@@ -7,7 +7,7 @@
 
 The `r spp` population has been modeled as a single stock off of the U.S. West Coast (essentially northern California to the Canadian border, since `r spp` are seen extremely rarely in central and southern California). Good recruitments show up in size-composition data throughout all portions of this area, which supports the single stock hypothesis. This assessment includes landings and catch data for `r spp` from the states of Washington, Oregon and California, along with records from foreign fisheries, the at-sea hake fleet, and surveys.
 
-Prior to 1966, the `r spp` resource off of the northern portion of the U.S. West Coast was harvested almost entirely by Canadian and United States vessels. Harvest was negligible prior to 1940, reached 1,300 mt in 1950, 3,200 mt in 1961 and exceeded 7,600 mt in 1965. Catches increased dramatically after 1965, with the introduction of large distant-water fishing fleets from the Soviet Union and Japan. Both nations employed large factory stern trawlers as their primary method for harvesting Pacific ocean perch. Peak removals by all foreign nations combined are estimated at over 15,000 mt in 1966 and remained over 12,000 mt in 1967. These numbers are based upon a re-analysis of the foreign catch data [@rogers_species_2003], which focused on deriving a more realistic species composition for catches previously identified only as `r spp`. Catches declined rapidly following these peak years, and `r spp` stocks were considered to be severely depleted throughout the Oregon-Vancouver Island region by 1969  [@gunderson_population_1977; @gunderson_status_1977]. Landed harvest averaged 1,350 mt over the period 1977-94.  Landings have continued to decline since 1994, primarily due to more restrictive management.
+Prior to 1966, the `r spp` resource off of the northern portion of the U.S. West Coast was harvested almost entirely by Canadian and United States vessels. Harvest was negligible prior to 1940, reached 1,300 mt in 1950, 3,200 mt in 1961 and exceeded 7,600 mt in 1965. Catches increased dramatically after 1965, with the introduction of large distant-water fishing fleets from the Soviet Union and Japan. Both nations employed large factory stern trawlers as their primary method for harvesting Pacific ocean perch. Peak removals by all foreign nations combined are estimated at over 15,000 mt in 1966 and remained over 12,000 mt in 1967. These numbers are based upon a re-analysis of the foreign catch data [@rogers_species_2003], which focused on deriving a more realistic species composition for catches previously identified only as `r spp`. Catches declined rapidly following these peak years, and `r spp` stocks were considered to be severely depleted throughout the Oregon-Vancouver Island region by 1969  [@gunderson_population_1977; @gunderson_status_1977]. Landed harvest averaged 1,350 mt over the period 1977-94.  Landings have continued to decline since 1994, primarily due to more restrictive management (Figure \ref{fig:Catch}).
 
 Prior to 1977, `r spp` in the northeast Pacific were managed by the Canadian Government in its waters and by the individual states in waters off of the United States. With implementation of the Magnuson Fishery Conservation and Management Act (MFCMA) in 1977, U.S. territorial waters were extended to 200 miles from shore, and primary responsibility for management of the groundfish stocks off Washington, Oregon and California shifted from the states to the Pacific Fishery Management Council (PFMC) and the National Marine Fisheries Service (NMFS). At that time, however, a Fishery Management Plan (FMP) for the west coast groundfish stocks had not yet been approved. In the interim, the state agencies worked with the PFMC to address conservation issues. In 1981, the PFMC adopted a management strategy to rebuild the depleted Pacific ocean perch stocks to levels that would produce Maximum Sustainable Yield (MSY) within 20 years. On the basis of cohort analysis [@gunderson_results_1978],  the PFMC set Acceptable Biological Catch (ABC) levels at 600 mt for the US portion of the Vancouver INPFC area and 950 mt for the Columbia INPFC area. To implement this strategy, the states of Oregon and Washington each established landing limits for Pacific ocean perch. Trawl trip limits of various forms remained in effect through 2010 (Table \ref{tab:Regs}).
 
