--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -786,7 +786,8 @@ Island region by 1969 (Gunderson
 \protect\hyperlink{ref-gunderson_population_1977}{1977}, Gunderson et
 al. \protect\hyperlink{ref-gunderson_status_1977}{1977}). Landed harvest
 averaged 1,350 mt over the period 1977-94. Landings have continued to
-decline since 1994, primarily due to more restrictive management.
+decline since 1994, primarily due to more restrictive management (Fig
+\ref{fig:Catch}).
 
 Prior to 1977, Pacific ocean perch in the northeast Pacific were managed
 by the Canadian Government in its waters and by the individual states in
@@ -2563,15 +2564,7 @@ Year & OFL contriubtion (mt) & ACL landings (mt) & Age 5+ biomass (mt) & Spawnin
 
 \section{Figures}\label{figures}
 
-\begin{figure}
-\centering
-\includegraphics{Figures/boundary_map.png}
-\caption{Map showing the state boundary lines for management of the
-recreational fishing fleets. CRFS Districts 1-6 in California are
-presented as well as the WDFW Recreational Management Areas in
-Washington. Florence, OR is shown as a potential location of model
-stratification. \label{fig:boundary_map}}
-\end{figure}
+\newpage
 
 \begin{figure}
 \centering
@@ -2581,6 +2574,13 @@ stratification. \label{fig:boundary_map}}
 \end{figure}
 
 \FloatBarrier
+
+\begin{figure}
+\centering
+\includegraphics{r4ss/plots_mod1/catch2 landings stacked.png}
+\caption{Total catches Pacific ocean perch through 2016.
+\label{fig:Catch}}
+\end{figure}
 
 \FloatBarrier
 
