Added biology figures and ashop tables

--- a/1_Introduction.Rmd
+++ b/1_Introduction.Rmd
@@ -30,4 +30,6 @@ in Table \ref{tab:base_summary}.
 
 
 ##Fisheries off Canada, Alaska, and/or Mexico
-`r spp` can be found in waters off the US west coast and northward through Alaskan waters.  The subset of the stock off the US west coast represents the tail of the species distribution with little to no `r spp` being encountered south of northern California.  `r spp` are harvested both in Canada and Alaska.  The most recent updated assessments for the Bering Sea and the Gulf of Alaska stocks determined that neither stock are in an overfished state and recommended and acceptable biological catch of 43,723 mt and 23,918 mt, respectively, for 2017. \hl{Insert information about the Canadian stock}  
+`r spp` can be found in waters off the US west coast and northward through Alaskan waters.  The subset of the stock off the US west coast represents the tail of the species distribution with little to no `r spp` being encountered south of northern California.  `r spp` are harvested both in Canada and Alaska.  The most recent updated assessments for the Bering Sea and the Gulf of Alaska stocks determined that neither stock are in an overfished state and recommended and acceptable biological catch of 43,723 mt and 23,918 mt, respectively, for 2017. 
+
+In Canadian waters `r spp` has the largest single-species quota, accounting for approximately 25% of all rockfish landings by weight in the bottom trawl fleet.  The Canadian `r spp` stock is broken into three seperate areas that are individually assessed.  The status of the stock within each area are above Canadian management targets.  
