--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -786,7 +786,7 @@ Island region by 1969 (Gunderson
 \protect\hyperlink{ref-gunderson_population_1977}{1977}, Gunderson et
 al. \protect\hyperlink{ref-gunderson_status_1977}{1977}). Landed harvest
 averaged 1,350 mt over the period 1977-94. Landings have continued to
-decline since 1994, primarily due to more restrictive management (Fig
+decline since 1994, primarily due to more restrictive management (Figure
 \ref{fig:Catch}).
 
 Prior to 1977, Pacific ocean perch in the northeast Pacific were managed
@@ -870,7 +870,13 @@ The most recent updated assessments for the Bering Sea and the Gulf of
 Alaska stocks determined that neither stock are in an overfished state
 and recommended and acceptable biological catch of 43,723 mt and 23,918
 mt, respectively, for 2017.
-\hl{Insert information about the Canadian stock}
+
+In Canadian waters Pacific ocean perch has the largest single-species
+quota, accounting for approximately 25\% of all rockfish landings by
+weight in the bottom trawl fleet. The Canadian Pacific ocean perch stock
+is broken into three seperate areas that are individually assessed. The
+status of the stock within each area are above Canadian management
+targets.
 
 \section{Assessment}\label{assessment}
 
@@ -1490,10 +1496,9 @@ Considerations}\label{regional-management-considerations}
 
 \section{Acknowledgments}\label{acknowledgments}
 
-Include: STAR panel members and affiliations as well as names and
-affiliations of persons who contributed data, advice or information but
-were not part of the assessment team. Not required in draft assessment
-undergoing review.
+Teresa Tsou (WDFW), Philip Wyland (WDFW), Ali Whitman (ODFW), Patrick
+Mirrick (ODFW), Patrick McDonald (CAPS), Vanessa Tuttle (ASHOP), Beth
+Horness (NWFSC), Kayleigh Sommers (NWFSC), Jason Jannot (NWFSC)
 
 \newpage
 
@@ -1954,6 +1959,32 @@ Year & Trips & Fish & Sample Size \\
 
 \begin{table}[ht]
 \centering
+\caption{Summary of At-Sea hake fishery length samples used in the stock assessment.} 
+\label{tab:ASHOP_Lengths}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Trips & Fish & Sample Size \\ 
+  \hline
+2003 & 153 & 805 & 263 \\ 
+  2004 & 128 & 329 & 172 \\ 
+  2005 & 221 & 734 & 321 \\ 
+  2006 & 210 & 751 & 312 \\ 
+  2007 & 319 & 1119 & 470 \\ 
+  2008 & 26 & 2491 & 162 \\ 
+  2009 & 12 & 366 & 63 \\ 
+  2010 & 22 & 1794 & 155 \\ 
+  2011 & 36 & 1748 & 226 \\ 
+  2012 & 26 & 881 & 148 \\ 
+  2013 & 26 & 834 & 140 \\ 
+  2014 & 31 & 532 & 103 \\ 
+  2015 & 23 & 925 & 150 \\ 
+  2016 & 35 & 1947 & 240 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
 \caption{Summary of Pacific ocean perch survey length samples used in the stock assessment.} 
 \label{tab:POP_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
@@ -2074,6 +2105,21 @@ Year & Trips & Fish & Sample Size \\
   2010 & 53 & 1258 & 227 \\ 
   2011 & 86 & 1251 & 259 \\ 
   2012 & 7 & 331 & 49 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of At-sea hake fishery age samples used in the stock assessment.} 
+\label{tab:ASHOP_Ages}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
+  \hline
+Year & Trips & Fish & Sample Size \\ 
+  \hline
+2003 & 142 & 378 & 194 \\ 
+  2006 & 198 & 410 & 255 \\ 
+  2007 & 297 & 620 & 383 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -2627,7 +2673,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.8226
-(0.5299\_1.5611)
+(0.532\_1.6113)
 \label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
@@ -2666,7 +2712,7 @@ size adjustment (with 95\% interval) for len data from Fishery: 0.8226
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.8226
-(0.5458\_1.505)
+(0.538\_1.5404)
 \label{fig:mod1_9_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
