--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -2631,13 +2631,6 @@ Year & OFL contriubtion (mt) & ACL landings (mt) & Age 3+ biomass (mt) & Spawnin
 
 \FloatBarrier
 
-\begin{figure}
-\centering
-\includegraphics{Figures/discardLengthComps.png}
-\caption{Discard length frequency distributions from the WCGOP for
-Pacific ocean perch. \label{fig:WCGOP_discard}}
-\end{figure}
-
 \FloatBarrier
 
 \FloatBarrier
@@ -2678,7 +2671,70 @@ ocean perch. \label{fig:mat_compare}}
 \label{fig:fecundity}}
 \end{figure}
 
-\FloatBarrier 
+\FloatBarrier  \includegraphics{Figures/discardLengthComps.png}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/ASHOP_lengths.png}
+\caption{At-Sea hake fishery length frequency distributions for Pacific
+ocean perch. \label{fig:ASHOP_Length}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/ASHOP_ages.png}
+\caption{At-Sea hake fishery age frequency distributions for Pacific
+ocean perch. \label{fig:ASHOP_Age}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/TriennialLengths.png}
+\caption{Triennial survey length frequency distributions for Pacific
+ocean perch. \label{fig:Tri_Length}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/TriennialAges.png}
+\caption{Triennial survey age frequency distributions for Pacific ocean
+perch. \label{fig:Tri_Age}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/AFSCslope_Lengths.png}
+\caption{AFSC slope survey length frequency distributions for Pacific
+ocean perch. \label{fig:afsc_Length}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/NWslope_Lengths.png}
+\caption{NWFSC slope survey length frequency distributions for Pacific
+ocean perch. \label{fig:nw_slope_Length}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/NWslope_Ages.png}
+\caption{NWFSC slope survey age frequency distributions for Pacific
+ocean perch. \label{fig:nw_slope_Age}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/NWFSCcombo_Lengths.png}
+\caption{NWFSC shelf/lope survey length frequency distributions for
+Pacific ocean perch. \label{fig:nw_Length}}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Figures/NWFSCcombo_Ages.png}
+\caption{NWFSC shelf/slope survey age frequency distributions for
+Pacific ocean perch. \label{fig:nw_Age}}
+\end{figure}
 
 \begin{figure}
 \centering
