--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -1731,22 +1731,22 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
   1913 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
   1914 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
   1915 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
-  1916 & 0.1 & 0.0 & 0.4 & 0.0 &  0 & 0.0 \\ 
-  1917 & 0.1 & 0.0 & 0.8 & 0.0 &  0 & 0.0 \\ 
-  1918 & 0.1 & 0.0 & 1.1 & 0.0 &  0 & 0.0 \\ 
-  1919 & 0.1 & 0.0 & 0.4 & 0.0 &  0 & 0.0 \\ 
-  1920 & 0.1 & 0.0 & 0.3 & 0.0 &  0 & 0.0 \\ 
-  1921 & 0.1 & 0.0 & 0.3 & 0.0 &  0 & 0.0 \\ 
-  1922 & 0.1 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
-  1923 & 0.1 & 0.0 & 0.2 & 0.0 &  0 & 0.0 \\ 
-  1924 & 0.1 & 0.0 & 0.5 & 0.0 &  0 & 0.0 \\ 
-  1925 & 0.1 & 0.0 & 0.6 & 0.0 &  0 & 0.0 \\ 
-  1926 & 0.2 & 0.0 & 1.0 & 0.0 &  0 & 0.0 \\ 
-  1927 & 0.1 & 0.0 & 1.4 & 0.0 &  0 & 0.0 \\ 
-  1928 & 0.1 & 0.1 & 1.2 & 0.0 &  0 & 0.0 \\ 
-  1929 & 0.5 & 0.1 & 0.7 & 0.0 &  0 & 0.0 \\ 
-  1930 & 0.4 & 0.1 & 0.9 & 0.0 &  0 & 0.0 \\ 
-  1931 & 0.9 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1916 & 0.0 & 0.0 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1917 & 0.0 & 0.0 & 0.8 & 0.0 &  0 & 0.0 \\ 
+  1918 & 0.0 & 0.0 & 1.1 & 0.0 &  0 & 0.0 \\ 
+  1919 & 0.0 & 0.0 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1920 & 0.0 & 0.0 & 0.3 & 0.0 &  0 & 0.0 \\ 
+  1921 & 0.0 & 0.0 & 0.3 & 0.0 &  0 & 0.0 \\ 
+  1922 & 0.0 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
+  1923 & 0.0 & 0.0 & 0.2 & 0.0 &  0 & 0.0 \\ 
+  1924 & 0.0 & 0.0 & 0.5 & 0.0 &  0 & 0.0 \\ 
+  1925 & 0.0 & 0.0 & 0.6 & 0.0 &  0 & 0.0 \\ 
+  1926 & 0.0 & 0.0 & 1.0 & 0.0 &  0 & 0.0 \\ 
+  1927 & 0.0 & 0.0 & 1.4 & 0.0 &  0 & 0.0 \\ 
+  1928 & 0.0 & 0.1 & 1.2 & 0.0 &  0 & 0.0 \\ 
+  1929 & 0.0 & 0.1 & 0.7 & 0.0 &  0 & 0.0 \\ 
+  1930 & 0.0 & 0.1 & 0.9 & 0.0 &  0 & 0.0 \\ 
+  1931 & 0.0 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -1757,51 +1757,51 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
   \hline
 Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
   \hline
-1932 & 0.6 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
-  1933 & 1.1 & 0.1 & 0.5 & 0.0 &  0 & 0.0 \\ 
-  1934 & 0.8 & 0.0 & 2.3 & 0.0 &  0 & 0.0 \\ 
-  1935 & 0.7 & 0.1 & 7.7 & 0.0 &  0 & 0.0 \\ 
-  1936 & 0.4 & 0.2 & 1.6 & 0.0 &  0 & 0.0 \\ 
-  1937 & 0.9 & 0.4 & 2.0 & 0.0 &  0 & 0.0 \\ 
-  1938 & 1.2 & 0.1 & 5.1 & 0.0 &  0 & 0.0 \\ 
-  1939 & 1.9 & 0.4 & 8.7 & 0.0 &  0 & 0.0 \\ 
-  1940 & 1.7 & 9.1 & 12.2 & 0.0 &  0 & 0.0 \\ 
-  1941 & 2.6 & 14.0 & 13.6 & 0.0 &  0 & 0.0 \\ 
-  1942 & 0.9 & 26.6 & 18.6 & 0.0 &  0 & 0.0 \\ 
-  1943 & 2.0 & 94.3 & 453.6 & 0.0 &  0 & 0.0 \\ 
-  1944 & 5.6 & 164.5 & 739.3 & 0.0 &  0 & 0.0 \\ 
-  1945 & 13.4 & 247.1 & 1887.1 & 0.0 &  0 & 0.0 \\ 
-  1946 & 14.6 & 193.2 & 845.9 & 0.0 &  0 & 0.0 \\ 
-  1947 & 5.1 & 167.2 & 385.3 & 0.0 &  0 & 0.0 \\ 
-  1948 & 7.9 & 177.8 & 491.1 & 0.0 &  0 & 0.0 \\ 
-  1949 & 4.0 & 472.9 & 409.5 & 0.0 &  0 & 0.0 \\ 
-  1950 & 3.0 & 690.1 & 675.7 & 0.0 &  0 & 0.0 \\ 
+1932 & 0.0 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1933 & 0.0 & 0.1 & 0.5 & 0.0 &  0 & 0.0 \\ 
+  1934 & 0.0 & 0.0 & 2.3 & 0.0 &  0 & 0.0 \\ 
+  1935 & 0.0 & 0.1 & 7.7 & 0.0 &  0 & 0.0 \\ 
+  1936 & 0.0 & 0.2 & 1.6 & 0.0 &  0 & 0.0 \\ 
+  1937 & 0.0 & 0.4 & 2.0 & 0.0 &  0 & 0.0 \\ 
+  1938 & 0.0 & 0.1 & 5.1 & 0.0 &  0 & 0.0 \\ 
+  1939 & 0.0 & 0.4 & 8.7 & 0.0 &  0 & 0.0 \\ 
+  1940 & 0.9 & 9.1 & 12.2 & 0.0 &  0 & 0.0 \\ 
+  1941 & 1.3 & 14.0 & 13.6 & 0.0 &  0 & 0.0 \\ 
+  1942 & 0.5 & 26.6 & 18.6 & 0.0 &  0 & 0.0 \\ 
+  1943 & 1.0 & 94.3 & 453.6 & 0.0 &  0 & 0.0 \\ 
+  1944 & 2.8 & 164.5 & 739.3 & 0.0 &  0 & 0.0 \\ 
+  1945 & 6.7 & 247.1 & 1887.1 & 0.0 &  0 & 0.0 \\ 
+  1946 & 7.3 & 193.2 & 845.9 & 0.0 &  0 & 0.0 \\ 
+  1947 & 2.6 & 167.2 & 385.3 & 0.0 &  0 & 0.0 \\ 
+  1948 & 4.0 & 177.8 & 491.1 & 0.0 &  0 & 0.0 \\ 
+  1949 & 2.0 & 472.9 & 409.5 & 0.0 &  0 & 0.0 \\ 
+  1950 & 1.5 & 690.1 & 675.7 & 0.0 &  0 & 0.0 \\ 
   1951 & 4.3 & 840.1 & 735.1 & 0.0 &  0 & 0.0 \\ 
   1952 & 2.9 & 2030.5 & 305.6 & 0.0 &  0 & 0.0 \\ 
-  1953 & 145.6 & 1223.5 & 361.6 & 0.0 &  0 & 0.0 \\ 
-  1954 & 123.2 & 1837.5 & 538.8 & 0.0 &  0 & 0.0 \\ 
-  1955 & 48.8 & 1346.4 & 555.6 & 0.0 &  0 & 0.0 \\ 
+  1953 & 145.9 & 1223.5 & 361.6 & 0.0 &  0 & 0.0 \\ 
+  1954 & 123.5 & 1837.5 & 538.8 & 0.0 &  0 & 0.0 \\ 
+  1955 & 23.0 & 1346.4 & 555.6 & 0.0 &  0 & 0.0 \\ 
   1956 & 3.8 & 2563.8 & 548.2 & 0.0 &  0 & 0.0 \\ 
-  1957 & 1.6 & 2128.1 & 538.5 & 0.0 &  0 & 0.0 \\ 
+  1957 & 1.4 & 2128.1 & 538.5 & 0.0 &  0 & 0.0 \\ 
   1958 & 2.9 & 1564.9 & 530.4 & 0.0 &  0 & 0.0 \\ 
   1959 & 1.5 & 892.6 & 337.0 & 0.0 &  0 & 0.0 \\ 
-  1960 & 19.6 & 1358.8 & 928.1 & 0.0 &  0 & 0.0 \\ 
+  1960 & 10.5 & 1358.8 & 928.1 & 0.0 &  0 & 0.0 \\ 
   1961 & 1.1 & 2061.9 & 1179.8 & 0.0 &  0 & 0.0 \\ 
   1962 & 0.6 & 2584.9 & 1725.2 & 0.0 &  0 & 0.0 \\ 
-  1963 & 32.5 & 3693.9 & 2006.0 & 0.0 &  0 & 0.0 \\ 
-  1964 & 46.1 & 4261.6 & 1770.7 & 0.0 &  0 & 0.0 \\ 
-  1965 & 34.9 & 5627.8 & 1972.1 & 0.0 &  0 & 0.0 \\ 
-  1966 & 5.2 & 1591.2 & 1725.5 & 0.0 & 15561 & 0.0 \\ 
-  1967 & 17.8 & 354.7 & 1861.0 & 0.0 & 12357 & 0.0 \\ 
-  1968 & 21.9 & 466.4 & 2501.2 & 0.0 & 6639 & 0.0 \\ 
+  1963 & 3.9 & 3693.9 & 2006.0 & 0.0 &  0 & 0.0 \\ 
+  1964 & 7.7 & 4261.6 & 1770.7 & 0.0 &  0 & 0.0 \\ 
+  1965 & 17.7 & 5627.8 & 1972.1 & 0.0 &  0 & 0.0 \\ 
+  1966 & 1.9 & 1591.2 & 1725.5 & 0.0 & 15561 & 0.0 \\ 
+  1967 & 9.5 & 354.7 & 1861.0 & 0.0 & 12357 & 0.0 \\ 
+  1968 & 11.5 & 466.4 & 2501.2 & 0.0 & 6639 & 0.0 \\ 
   1969 & 8.4 & 422.3 & 1236.0 & 0.0 & 469 & 0.0 \\ 
   1970 & 8.7 & 507.4 & 1293.3 & 0.0 & 441 & 0.0 \\ 
   1971 & 12.2 & 290.4 & 673.6 & 0.0 & 902 & 0.0 \\ 
   1972 & 11.4 & 105.3 & 796.5 & 0.0 & 950 & 0.0 \\ 
-  1973 & 11.9 & 121.2 & 713.1 & 0.0 & 1773 & 0.0 \\ 
+  1973 & 12.0 & 121.2 & 713.1 & 0.0 & 1773 & 0.0 \\ 
   1974 & 15.7 & 136.7 & 641.8 & 0.0 & 1457 & 0.0 \\ 
   1975 & 11.4 & 181.3 & 413.9 & 62.3 & 496 & 0.0 \\ 
-  1976 & 17.1 & 663.7 & 521.1 & 31.9 & 239 & 0.0 \\ 
+  1976 & 17.2 & 663.7 & 521.1 & 31.9 & 239 & 0.0 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -1812,10 +1812,10 @@ Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\
   \hline
 Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
   \hline
-1977 & 16.7 & 457.1 & 752.0 & 3.8 &  0 & 11.9 \\ 
-  1978 & 42.5 & 498.7 & 1391.5 & 15.4 &  0 & 0.0 \\ 
-  1979 & 136.7 & 735.9 & 581.4 & 15.1 &  0 & 34.5 \\ 
-  1980 & 19.2 & 948.6 & 666.2 & 47.0 &  0 & 4.6 \\ 
+1977 & 16.8 & 457.1 & 752.0 & 3.8 &  0 & 11.9 \\ 
+  1978 & 42.6 & 498.7 & 1391.5 & 15.4 &  0 & 0.0 \\ 
+  1979 & 137.0 & 735.9 & 581.4 & 15.1 &  0 & 34.5 \\ 
+  1980 & 19.3 & 948.6 & 666.2 & 47.0 &  0 & 4.6 \\ 
   1981 & 10.8 & 929.7 & 390.3 & 15.4 &  0 & 0.0 \\ 
   1982 & 145.9 & 584.0 & 273.0 & 28.3 &  0 & 0.0 \\ 
   1983 & 102.0 & 1032.7 & 437.7 & 10.9 &  0 & 4.4 \\ 
@@ -2689,14 +2689,14 @@ ocean perch. \label{fig:ASHOP_Age}}
 
 \begin{figure}
 \centering
-\includegraphics{Figures/TriennialLengths.png}
+\includegraphics{Figures/Triennial_Lengths.png}
 \caption{Triennial survey length frequency distributions for Pacific
 ocean perch. \label{fig:Tri_Length}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{Figures/TriennialAges.png}
+\includegraphics{Figures/Triennial_Ages.png}
 \caption{Triennial survey age frequency distributions for Pacific ocean
 perch. \label{fig:Tri_Age}}
 \end{figure}
@@ -2764,7 +2764,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.7915
-(0.4998\_1.5788)
+(0.5121\_1.5052)
 \label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
@@ -2803,7 +2803,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.7915
-(0.5097\_1.586)
+(0.5023\_1.512)
 \label{fig:mod1_9_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
@@ -2835,7 +2835,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_ASHOP.png}
 \caption{Francis data weighting method TA1.8 ASHOP Suggested sample size
 adjustment (with 95\% interval) for len data from ASHOP: 0.7167
-(0.3413\_13.4623)
+(0.3546\_12.9798)
 \label{fig:mod1_13_comp_lenfit_data_weighting_TA1.8_ASHOP}}
 \end{figure}
 
@@ -2898,7 +2898,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Triennial.png}
 \caption{Francis data weighting method TA1.8 Triennial Suggested sample
 size adjustment (with 95\% interval) for len data from Triennial: 0.7141
-(0.3984\_4.9813)
+(0.3985\_7.591)
 \label{fig:mod1_21_comp_lenfit_data_weighting_TA1.8_Triennial}}
 \end{figure}
 
@@ -2930,7 +2930,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_AFSCSlope.png}
 \caption{Francis data weighting method TA1.8 AFSCSlope Suggested sample
 size adjustment (with 95\% interval) for len data from AFSCSlope: 0.8305
-(0.5906\_Inf)
+(0.5489\_130.952)
 \label{fig:mod1_25_comp_lenfit_data_weighting_TA1.8_AFSCSlope}}
 \end{figure}
 
@@ -2994,7 +2994,7 @@ and open bubbles are negative residuals (observed \textless{} expected).
 \includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_NWFSCcombo.png}
 \caption{Francis data weighting method TA1.8 NWFSCcombo Suggested sample
 size adjustment (with 95\% interval) for len data from NWFSCcombo: 0.686
-(0.4096\_3.4525)
+(0.4115\_4.3289)
 \label{fig:mod1_33_comp_lenfit_data_weighting_TA1.8_NWFSCcombo}}
 \end{figure}
 
