--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -572,7 +572,7 @@ Yield curve: Figure \ref{fig:Yield_all}
 \centering
 \caption{Projections of potential OFL (mt) and ACL (mt) and the estimated spawning output and relative biomass.} 
 \label{tab:OFL_projection}
-\begin{tabular}{lllll}
+\begin{tabular}{>{\raggedleft}p{0.5in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.5in}>{\centering}p{1.1in}}
   \hline
 Year & OFL & ACL & Spawning Output ( million eggs ) & Relative Biomass \\ 
   \hline
